--- a/Assignment 2/projeto2-structure/projeto2-parent/projeto2-web/src/main/webapp/index.html
+++ b/Assignment 2/projeto2-structure/projeto2-parent/projeto2-web/src/main/webapp/index.html
@@ -11,12 +11,12 @@
     <h2>O que deseja fazer?</h2>
 
     <h3>Login</h3>
-    <form method="post" action="Login">
+    <form method="post" action="login.jsp">
         <input type="submit" value="Login">
     </form>
     <br>
     <h3>Registo</h3>
-    <form method="post" action="Register">
+    <form method="post" action="register.jsp">
         <input type="submit" value="Register">
     </form>
 </div>
